--- a/bin/csh/csh.1
+++ b/bin/csh/csh.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: csh.1,v 1.36 2000/04/17 02:32:41 aaron Exp $
+.\"	$OpenBSD: csh.1,v 1.37 2000/10/19 18:29:26 aaron Exp $
 .\"	$NetBSD: csh.1,v 1.10 1995/03/21 09:02:35 cgd Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
@@ -2677,7 +2677,7 @@ read by login shell, at logout
 .It Pa /bin/sh
 standard shell, for shell scripts not starting with a
 .Ql #
-.It Pa /tmp/sh*
+.It Pa /tmp/sh.*
 temporary file for
 .Ql <<
 .It Pa /etc/passwd
