--- a/bin/hostname/hostname.1
+++ b/bin/hostname/hostname.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hostname.1,v 1.10 2000/03/17 18:15:13 aaron Exp $
+.\"	$OpenBSD: hostname.1,v 1.11 2000/04/12 21:47:47 aaron Exp $
 .\"	$NetBSD: hostname.1,v 1.11 1995/09/07 06:28:39 jtc Exp $
 .\"
 .\" Copyright (c) 1983, 1988, 1990, 1993
@@ -56,7 +56,7 @@ This is used at system boot time by
 to initialize the hostname.
 .Pp
 The options are as follows:
-.Bl -tag -width flag
+.Bl -tag -width Ds
 .It Fl s
 Trims off any domain information from the printed
 name.
