--- a/bin/ls/ls.1
+++ b/bin/ls/ls.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ls.1,v 1.27 2000/07/23 06:16:42 ericj Exp $
+.\"	$OpenBSD: ls.1,v 1.28 2000/10/18 06:55:08 aaron Exp $
 .\"	$NetBSD: ls.1,v 1.14 1995/12/05 02:44:01 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1991, 1993, 1994
@@ -68,7 +68,7 @@ and non-directory operands are sorted separately and in
 lexicographical order.
 .Pp
 The options are as follows:
-.Bl -tag -width indent
+.Bl -tag -width Ds
 .It Fl A
 List all entries except for
 .Dq \&.
