--- a/bin/md5/sha1.1
+++ b/bin/md5/sha1.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sha1.1,v 1.6 1998/12/15 01:20:23 aaron Exp $
+.\"	$OpenBSD: sha1.1,v 1.7 2000/03/23 21:10:22 aaron Exp $
 .\"
 .Dd July 12, 1997
 .Dt SHA1 1
@@ -28,7 +28,7 @@ such as
 .Em RSA .
 .Pp
 The options are as follows:
-.Bl -tag -width Fl
+.Bl -tag -width Ds
 .It Fl s Ar string
 Prints a checksum of the given
 .Ar string .
