--- a/usr.bin/cap_mkdb/cap_mkdb.1
+++ b/usr.bin/cap_mkdb/cap_mkdb.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cap_mkdb.1,v 1.10 1999/07/03 02:11:08 aaron Exp $
+.\"	$OpenBSD: cap_mkdb.1,v 1.11 2000/03/04 21:12:01 aaron Exp $
 .\"	$NetBSD: cap_mkdb.1,v 1.4 1995/03/26 03:59:36 glass Exp $
 .\"
 .\" Copyright (c) 1992, 1993
@@ -70,7 +70,7 @@ capabilities of the records are expanded before the
 record is stored into the database.
 .Pp
 The options are as follows:
-.Bl -tag -width XXXXXX -indent
+.Bl -tag -width Ds
 .It Fl f Ar outfile
 Specify a different database basename.
 .It Fl i
