--- a/usr.bin/cksum/Attic/cksum.1
+++ b/usr.bin/cksum/Attic/cksum.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cksum.1,v 1.10 1999/07/21 01:25:42 deraadt Exp $
+.\"	$OpenBSD: cksum.1,v 1.11 2000/03/05 20:09:20 aaron Exp $
 .\"	$NetBSD: cksum.1,v 1.8 1995/09/02 05:45:15 jtc Exp $
 .\"
 .\" Copyright (c) 1991, 1993
@@ -70,7 +70,7 @@ described below.
 It is provided for compatibility only.
 .Pp
 The options are as follows:
-.Bl -tag -width indent
+.Bl -tag -width Ds
 .It Fl o Ar \&1 No \&| Ar \&2
 Use historic algorithms instead of the (superior) default one.
 .Pp
