--- a/usr.bin/cdio/cdio.1
+++ b/usr.bin/cdio/cdio.1
@@ -1,4 +1,4 @@
-.\" $OpenBSD: cdio.1,v 1.17 2000/03/05 20:09:19 aaron Exp $
+.\" $OpenBSD: cdio.1,v 1.18 2000/07/06 04:06:54 aaron Exp $
 .Dd July 3, 1995
 .Dt CDIO 1
 .Os
@@ -34,7 +34,7 @@ If no command is given,
 enters an interactive mode, reading commands from the standard input.
 .Pp
 The options are as follows:
-.Bl -tag -width flag
+.Bl -tag -width Ds
 .It Fl s
 Silent mode.
 Do not print table headers or human-readable comments.
