--- a/usr.bin/fsplit/fsplit.1
+++ b/usr.bin/fsplit/fsplit.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: fsplit.1,v 1.6 1999/07/04 11:53:54 aaron Exp $
+.\"	$OpenBSD: fsplit.1,v 1.7 2000/03/07 21:11:08 aaron Exp $
 .\"	$NetBSD: fsplit.1,v 1.3 1995/09/28 05:15:06 perry Exp $
 .\"
 .\" Copyright (c) 1983, 1990, 1993
@@ -72,7 +72,7 @@ where
 does not already exist.
 .Pp
 The options are as follows:
-.Bl -tag -width Fl
+.Bl -tag -width Ds
 .It Fl e Ar efile
 Normally each subprogram unit is split into a separate file.
 When the
