--- a/usr.bin/ftp/ftp.1
+++ b/usr.bin/ftp/ftp.1
@@ -1,4 +1,4 @@
-.\" 	$OpenBSD: ftp.1,v 1.30 2000/06/13 21:28:38 millert Exp $
+.\" 	$OpenBSD: ftp.1,v 1.31 2000/06/21 19:22:54 itojun Exp $
 .\" 	$NetBSD: ftp.1,v 1.22 1997/08/18 10:20:22 lukem Exp $
 .\"
 .\" Copyright (c) 1985, 1989, 1990, 1993
@@ -71,7 +71,7 @@ Refer to
 below for more information.
 .Pp
 The options are as follows:
-.Bl -tag -width "port    "
+.Bl -tag -width Ds
 .It Fl A
 Force active mode ftp.
 By default,
