--- a/usr.sbin/ipsend/ipresend/Attic/ipresend.1
+++ b/usr.sbin/ipsend/ipresend/Attic/ipresend.1
@@ -1,4 +1,4 @@
-./" $OpenBSD: ipresend.1,v 1.8 2000/08/23 03:13:33 ericj Exp $
+./" $OpenBSD: ipresend.1,v 1.9 2000/11/08 19:37:34 aaron Exp $
 .Dd October 9, 1999
 .Dt IPRESEND 1
 .Os
@@ -26,7 +26,7 @@ binary data.
 must be run as root.
 .Pp
 The options are as follows:
-.Bl -tag -width "d interface "
+.Bl -tag -width Ds
 .It Fl d Ar interface
 Set the interface name to be the name supplied.
 This is useful with the
