--- a/bin/chmod/chgrp.1
+++ b/bin/chmod/chgrp.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: chgrp.1,v 1.6 2000/04/15 11:45:59 aaron Exp $
+.\"	$OpenBSD: chgrp.1,v 1.1 2000/06/09 16:26:51 mickey Exp $
 .\"
 .\" Copyright (c) 1983, 1990, 1993, 1994
 .\"	The Regents of the University of California.  All rights reserved.
@@ -88,7 +88,7 @@ options are mutually exclusive.
 .Pp
 The
 .Fl H ,
-.Fl L
+.Fl L ,
 and
 .Fl P
 options are ignored unless the
