--- a/share/man/man5/passwd.5
+++ b/share/man/man5/passwd.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: passwd.5,v 1.15 2000/08/20 19:37:35 millert Exp $
+.\"	$OpenBSD: passwd.5,v 1.16 2000/10/26 00:37:05 aaron Exp $
 .\"	$NetBSD: passwd.5,v 1.4 1995/07/28 06:46:05 phil Exp $
 .\"
 .\" Copyright (c) 1988, 1991, 1993
@@ -137,7 +137,7 @@ this field currently has little special meaning.
 The
 .Ar class
 field is used by
-.Xr login 8
+.Xr login 1
 and other programs to determine which entry in the
 .Xr login.conf 5
 database should be used.
