--- a/usr.bin/cdio/cdio.1
+++ b/usr.bin/cdio/cdio.1
@@ -1,10 +1,10 @@
-.\" $OpenBSD: cdio.1,v 1.18 2000/07/06 04:06:54 aaron Exp $
+.\" $OpenBSD: cdio.1,v 1.19 2000/11/09 17:52:05 aaron Exp $
 .Dd July 3, 1995
 .Dt CDIO 1
 .Os
 .Sh NAME
 .Nm cdio
-.Nd compact disc control utility
+.Nd compact disc audio player and control utility
 .Sh SYNOPSIS
 .Nm cdio
 .Op Fl s
