--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.21 2000/12/14 13:26:26 espie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.22 2000/12/27 18:21:11 espie Exp $
 .\"
 .\" Copyright (c) 2000 Marc Espie
 .\"
@@ -901,6 +901,8 @@ and
 to determine which files can be mirrored instead.
 See
 .Xr mirroring-ports 7 .
+.It Ev NO_BUILD
+Do not actually build the port.
 .It Ev NO_CONFIGURE
 If ${FILESDIR}/configure does not exist, no automatic configuration will
 be done anyway.
