--- a/usr.sbin/ipfs/Attic/ipfs.8
+++ b/usr.sbin/ipfs/Attic/ipfs.8
@@ -1,5 +1,5 @@
-.\"	$OpenBSD$
-.TH ipfs 8
+.\"	$OpenBSD: ipfs.8,v 1.1 2001/01/17 06:31:06 fgsch Exp $
+.TH IPFS 8
 .SH NAME
 ipfs \- saves and restores information for NAT and state tables.
 .SH SYNOPSIS
