--- a/share/man/man4/man4.sun3/Attic/ie.4
+++ b/share/man/man4/man4.sun3/Attic/ie.4
@@ -1,3 +1,4 @@
+.\"	$OpenBSD: ie.4,v 1.1.1.1 1995/08/08 20:18:53 gwr Exp $
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
