--- a/bin/pax/tar.1
+++ b/bin/pax/tar.1
@@ -27,7 +27,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\"	$OpenBSD: tar.1,v 1.27 2000/11/09 23:47:17 aaron Exp $
+.\"	$OpenBSD: tar.1,v 1.28 2000/11/09 23:58:56 aaron Exp $
 .\"
 .Dd June 11, 1996
 .Dt TAR 1
@@ -38,7 +38,7 @@
 .Sh SYNOPSIS
 .Nm tar
 .Sm off
-.Oo \&- Oc {crtux} Op Fl befhmopqvwzHLOPXZ014578
+.Oo \&- Oc {crtux} Op befhmopqvwzHLOPXZ014578
 .Sm on
 .Op Ar archive
 .Op Ar blocksize
