--- a/usr.bin/file/file.1
+++ b/usr.bin/file/file.1
@@ -1,4 +1,4 @@
-.\" $OpenBSD: file.1,v 1.11 2000/11/09 17:52:08 aaron Exp $
+.\" $OpenBSD: file.1,v 1.12 2000/11/10 05:10:25 aaron Exp $
 .\" $FreeBSD: src/usr.bin/file/file.1,v 1.16 2000/03/01 12:19:39 sheldonh Exp $
 .Dd July 30, 1997
 .Dt FILE 1
@@ -152,7 +152,7 @@ The following environment varibles affect the execution of
 .Nm file :
 .Pp
 .Bl -tag -width indent
-.Ev MAGIC
+.It Ev MAGIC
 Default magic number files.
 .El
 .Sh FILES
