--- a/share/man/man5/a.out.5
+++ b/share/man/man5/a.out.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: a.out.5,v 1.7 2000/03/19 19:25:26 aaron Exp $
+.\"	$OpenBSD: a.out.5,v 1.8 2000/10/26 00:37:03 aaron Exp $
 .\"	$NetBSD: a.out.5,v 1.8 1994/11/30 19:31:09 jtc Exp $
 .\"
 .\" Copyright (c) 1991, 1993
@@ -44,6 +44,7 @@
 .Nm a.out
 .Nd format of executable binary files
 .Sh SYNOPSIS
+.Fd #include <sys/types.h>
 .Fd #include <a.out.h>
 .Sh DESCRIPTION
 The include file
