--- a/share/man/man4/man4.vax/dhu.4
+++ b/share/man/man4/man4.vax/dhu.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dhu.4,v 1.2 1996/03/29 10:16:35 niklas Exp $
+.\"	$OpenBSD: dhu.4,v 1.3 1999/06/05 13:18:37 aaron Exp $
 .\"	$NetBSD: dhu.4,v 1.4 1996/03/05 15:28:48 ragge Exp $
 .\"
 .\" Copyright (c) 1985, 1991 Regents of the University of California.
@@ -105,7 +105,8 @@ driver appeared in
 .br
 A new
 .Nm
-driver showed up in NetBSD 1.1A.
+driver showed up in
+.Nx 1.1a .
 .Sh BUGS
 Even if the
 .Nm
