--- a/share/man/man4/man4.vax/Attic/ts.4
+++ b/share/man/man4/man4.vax/Attic/ts.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ts.4,v 1.4 1996/10/08 01:20:52 michaels Exp $
+.\"	$OpenBSD: ts.4,v 1.5 1999/05/16 19:57:35 alex Exp $
 .\"	$NetBSD: ts.4,v 1.4 1996/03/03 17:14:08 thorpej Exp $
 .\"
 .\" Copyright (c) 1980, 1991 Regents of the University of California.
@@ -98,6 +98,7 @@ driver appeared in
 .br
 A new
 .Nm
-driver showed up in NetBSD 1.1A.
+driver showed up in
+.Nx 1.1a .
 .Sh BUGS
 Lots of them.
