--- a/share/man/man4/man4.sparc/si.4
+++ b/share/man/man4/man4.sparc/si.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: si.4,v 1.2 1999/05/16 19:57:22 alex Exp $
+.\"	$OpenBSD: si.4,v 1.3 1999/07/09 13:35:42 aaron Exp $
 .\"
 .\" Copyright (c) 1998 The OpenBSD Project
 .\" All rights reserved.
@@ -40,4 +40,5 @@ use DMA by default.
 .Sh HISTORY
 The
 .Nm
-driver first appeared in NetBSD.
+driver first appeared in
+.Nx .
