--- a/share/man/man4/man4.sparc/xd.4
+++ b/share/man/man4/man4.sparc/xd.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: xd.4,v 1.2 1998/03/08 01:16:09 johns Exp $
+.\"	$OpenBSD: xd.4,v 1.3 1999/07/09 13:35:42 aaron Exp $
 .\"
 .\" Copyright (c) 1998 The OpenBSD Project
 .\" All rights reserved.
@@ -28,6 +28,8 @@ VME card.
 .Sh HISTORY
 The
 .Nm
-driver first appeared in NetBSD and was written by
+driver first appeared in
+.Nx
+and was written by
 .br
 Charles D. Cranor.
