--- a/share/man/man4/man4.sparc/sw.4
+++ b/share/man/man4/man4.sparc/sw.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sw.4,v 1.2 1999/05/16 19:57:22 alex Exp $
+.\"	$OpenBSD: sw.4,v 1.3 1999/07/09 13:35:42 aaron Exp $
 .\"
 .\" Copyright (c) 1998 The OpenBSD Project
 .\" All rights reserved.
@@ -46,4 +46,5 @@ driver only supports polled DMA at this time.
 .Sh HISTORY
 The
 .Nm
-driver first appeared in NetBSD.
+driver first appeared in
+.Nx .
