--- a/share/man/man5/passwd.5
+++ b/share/man/man5/passwd.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: passwd.5,v 1.16 2000/10/26 00:37:05 aaron Exp $
+.\"	$OpenBSD: passwd.5,v 1.17 2000/11/20 08:00:03 deraadt Exp $
 .\"	$NetBSD: passwd.5,v 1.4 1995/07/28 06:46:05 phil Exp $
 .\"
 .\" Copyright (c) 1988, 1991, 1993
@@ -76,7 +76,7 @@ User's home directory.
 User's login shell.
 .El
 .Pp
-The publically-readable
+The publicaly-readable
 .Nm passwd
 file is generated from the
 .Nm master.passwd
