--- a/usr.bin/ftp/ftp.1
+++ b/usr.bin/ftp/ftp.1
@@ -1,4 +1,4 @@
-.\" 	$OpenBSD: ftp.1,v 1.31 2000/06/21 19:22:54 itojun Exp $
+.\" 	$OpenBSD: ftp.1,v 1.32 2000/11/09 17:52:12 aaron Exp $
 .\" 	$NetBSD: ftp.1,v 1.22 1997/08/18 10:20:22 lukem Exp $
 .\"
 .\" Copyright (c) 1985, 1989, 1990, 1993
@@ -44,7 +44,7 @@
 file transfer program
 .Sh SYNOPSIS
 .Nm ftp
-.Op Fl AVadegimnptu
+.Op Fl AVadegimnptv
 .Op Fl o Ar output
 .Op Fl P Ar port
 .Op Fl r Ar seconds
