--- a/share/man/man5/bsd.port.mk.5
+++ b/share/man/man5/bsd.port.mk.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: bsd.port.mk.5,v 1.30 2001/03/28 15:02:11 espie Exp $
+.\" $OpenBSD: bsd.port.mk.5,v 1.31 2001/03/28 22:00:59 naddy Exp $
 .\"
 .\" Copyright (c) 2000 Marc Espie
 .\"
@@ -1350,3 +1350,5 @@ improvements.
 .\" HAVE_MOTIF, REQUIRE_MOTIF: need to revisit what these should mean.
 .\"
 .\" Todo: OBJMACHINE
+.Sh SEE ALSO
+.Xr packages-specs 7
