--- a/usr.sbin/moused/Attic/moused.8
+++ b/usr.sbin/moused/Attic/moused.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: moused.8,v 1.3 2000/09/09 17:14:56 deraadt Exp $
+.\"	$OpenBSD: moused.8,v 1.4 2000/10/30 18:48:02 aaron Exp $
 .\"
 .Dd August 30, 2000
 .Dt MOUSED 8 i386
