--- a/bin/pax/cpio.1
+++ b/bin/pax/cpio.1
@@ -1,3 +1,4 @@
+.\"	$OpenBSD$
 .\"
 .\" Copyright (c) 1997 SigmaSoft, Th. Lockert
 .\" All rights reserved.
@@ -27,7 +28,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\"	$OpenBSD: cpio.1,v 1.15 2001/02/07 19:04:13 millert Exp $
+.\"	$OpenBSD: cpio.1,v 1.16 2001/05/01 17:58:01 aaron Exp $
 .\"
 .Dd February 16, 1997
 .Dt CPIO 1
