--- a/bin/pax/tar.1
+++ b/bin/pax/tar.1
@@ -1,3 +1,4 @@
+.\"	$OpenBSD$
 .\"
 .\" Copyright (c) 1996 SigmaSoft, Th. Lockert
 .\" All rights reserved.
@@ -27,7 +28,7 @@
 .\" (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\"	$OpenBSD: tar.1,v 1.32 2001/02/10 17:21:14 millert Exp $
+.\"	$OpenBSD: tar.1,v 1.33 2001/05/01 17:58:01 aaron Exp $
 .\"
 .Dd February 7, 2001
 .Dt TAR 1
