--- a/sbin/ipf/Attic/ipf.5
+++ b/sbin/ipf/Attic/ipf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ipf.5,v 1.25 2000/04/26 21:04:00 deraadt Exp $
+.\"	$OpenBSD: ipf.5,v 1.26 2001/01/30 04:26:01 kjell Exp $
 .\"
 .TH IPF 5
 .SH NAME
