--- a/sbin/ipnat/Attic/ipnat.4
+++ b/sbin/ipnat/Attic/ipnat.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ipnat.4,v 1.19 2000/04/13 19:59:39 kjell Exp $
+.\"	$OpenBSD: ipnat.4,v 1.20 2001/01/20 20:50:55 fgsch Exp $
 .\"
 .TH IPNAT 4
 .SH NAME
