--- a/share/man/man5/Attic/primes.5
+++ b/share/man/man5/Attic/primes.5
@@ -1,4 +1,4 @@
-.\" $OpenBSD: primes.5,v 0.1 2000/12/29 14:59:12 was Exp $
+.\" $OpenBSD: primes.5,v 1.1 2001/06/14 13:53:50 provos Exp $
 .\"
 .\" Copyright 1997, 2000 William Allen Simpson <wsimpson@greendragon.com>
 .\" All rights reserved.
@@ -35,6 +35,7 @@
 .Os
 .Sh NAME
 .Nm primes
+.Nd system moduli file
 .Sh DESCRIPTION
 The
 .Pa /etc/primes
