--- a/share/man/man4/man4.vax/Attic/ht.4
+++ b/share/man/man4/man4.vax/Attic/ht.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ht.4,v 1.3 1999/05/16 19:57:29 alex Exp $
+.\"	$OpenBSD: ht.4,v 1.4 1999/06/05 13:18:38 aaron Exp $
 .\"	$NetBSD: ht.4,v 1.3 1996/03/03 17:13:39 thorpej Exp $
 .\"
 .\" Copyright (c) 1980, 1991 Regents of the University of California.
@@ -102,10 +102,10 @@ the operation which failed several times before reporting the error.
 .Xr tp 1 ,
 .Xr mt 4 ,
 .Xr mtio 4 ,
-.Xr physio 4 ,
 .Xr tm 4 ,
 .Xr ts 4 ,
-.Xr ut 4
+.Xr ut 4 ,
+.Xr physio 9
 .Sh HISTORY
 An
 .Nm
