--- a/share/man/man4/man4.vax/Attic/uu.4
+++ b/share/man/man4/man4.vax/Attic/uu.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: uu.4,v 1.2 1996/03/29 10:17:39 niklas Exp $
+.\"	$OpenBSD: uu.4,v 1.3 1999/06/05 13:18:40 aaron Exp $
 .\"	$NetBSD: uu.4,v 1.3 1996/03/03 17:14:14 thorpej Exp $
 .\"
 .\" Copyright (c) 1983, 1991 Regents of the University of California.
@@ -63,7 +63,7 @@ The interface supports only block
 to the
 .Tn TU58
 cassettes (see
-.Xr physio 4 ) .
+.Xr physio 9 ) .
 The drives are normally manipulated with the
 .Xr arff 8
 program using the ``m'' and ``f'' options.
