--- a/share/man/man4/man4.sparc/bwtwo.4
+++ b/share/man/man4/man4.sparc/bwtwo.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: bwtwo.4,v 1.6 1999/09/09 02:40:21 jason Exp $
+.\"	$OpenBSD: bwtwo.4,v 1.7 2000/03/02 14:46:48 todd Exp $
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -52,7 +52,9 @@
 The
 .Nm
 is a memory based black and white frame buffer.
-It supports the minimal ioctl's needed to run
+It supports the minimal
+.Xr ioctl 2 Ns s
+needed to run
 .Xr X 1 .
 .Sh SEE ALSO
 .Xr cgeight 4 ,
