--- a/share/man/man4/man4.sun3/Attic/bwtwo.4
+++ b/share/man/man4/man4.sun3/Attic/bwtwo.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: bwtwo.4,v 1.1.1.1 1995/08/08 20:18:53 gwr Exp $
+.\"	$OpenBSD: bwtwo.4,v 1.5 2001/01/29 02:11:12 niklas Exp $
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -50,7 +50,9 @@
 The
 .Nm
 is a memory based black and white frame buffer.
-It supports the minimal ioctl's needed to run
+It supports the minimal
+.Xr ioctl 2 Ns s
+needed to run
 .Xr X 1 .
 .Sh SEE ALSO
 .Xr cgfour 4 ,
