--- a/share/man/man4/man4.vax/Attic/dmf.4
+++ b/share/man/man4/man4.vax/Attic/dmf.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dmf.4,v 1.2 1996/03/29 10:16:38 niklas Exp $
+.\"	$OpenBSD: dmf.4,v 1.3 1999/06/05 13:18:37 aaron Exp $
 .\"	$NetBSD: dmf.4,v 1.3 1996/03/03 17:13:23 thorpej Exp $
 .\"
 .\" Copyright (c) 1983, 1991 Regents of the University of California.
@@ -89,9 +89,9 @@ and
 .Xr stty 1
 or may be communicated by other programs which
 utilize
-.Xr ioctl
+.Xr ioctl 2
 such as
-.Xr ifcongif 8 ,
+.Xr ifconfig 8 ,
 see
 .Xr tty 4  .
 .Pp
