--- a/share/man/man4/man4.vax/Attic/dmc.4
+++ b/share/man/man4/man4.vax/Attic/dmc.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: dmc.4,v 1.3 1999/05/16 19:57:26 alex Exp $
+.\"	$OpenBSD: dmc.4,v 1.4 1999/06/05 13:18:37 aaron Exp $
 .\"	$NetBSD: dmc.4,v 1.3 1996/03/03 17:13:22 thorpej Exp $
 .\"
 .\" Copyright (c) 1983, 1991 Regents of the University of California.
@@ -80,7 +80,7 @@ to 7 for the
 The configuration flags specify how to set up the device,
 .Bl -column xxx -offset indent
 0	full duplex DDCMP (normal mode)
-1	DDCMP Maintence mode (generally useless)
+1	DDCMP Maintenance mode (generally useless)
 2	DDCMP Half Duplex, primary station
 3	DDCMP Half Duplex, secondary station
 .El
