--- a/bin/ksh/sh.1
+++ b/bin/ksh/sh.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sh.1tbl,v 1.21 2001/04/12 02:51:10 aaron Exp $
+.\"	$OpenBSD: sh.1tbl,v 1.22 2001/05/28 15:36:08 aaron Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
 .\"     The Regents of the University of California.  All rights reserved.
@@ -3697,13 +3697,15 @@ signal and the shell exits.
 .Xr environ 5
 .Pp
 .Rs
-.%A Morris Bolsky and David Korn
+.%A Morris Bolsky
+.%A David Korn
 .%T "The KornShell Command and Programming Language"
 .%D 1983
 .%O "ISBN 0-13-516972-0"
 .Re
 .Rs
-.%A Stephen G. Kochan and Patrick H. Wood
+.%A Stephen G. Kochan
+.%A Patrick H. Wood
 .%T "UNIX Shell Programming"
 .%O "Hayden"
 .Re
