--- a/usr.bin/fold/fold.1
+++ b/usr.bin/fold/fold.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: fold.1,v 1.5 1999/07/21 01:25:43 deraadt Exp $
+.\"	$OpenBSD: fold.1,v 1.6 2000/11/09 17:52:10 aaron Exp $
 .\"	$NetBSD: fold.1,v 1.5 1995/09/01 01:42:42 jtc Exp $
 .\"
 .\" Copyright (c) 1980, 1993
@@ -44,7 +44,7 @@
 .Nm fold
 .Op Fl bs
 .Op Fl w Ar width
-.Ar file Op Ar ...
+.Op Ar file ...
 .Sh DESCRIPTION
 .Nm
 is a filter which folds the contents of the specified files,
