--- a/share/man/man5/Attic/pf.nat.5
+++ b/share/man/man5/Attic/pf.nat.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: nat.rules.5,v 1.2 2001/06/26 00:54:57 ian Exp $
+.\"	$OpenBSD: pf.nat.5,v 1.3 2001/06/26 04:46:21 chris Exp $
 .\"
 .\" Copyright (c) 2001 Ian Darwin.  All rights reserved.
 .\"
@@ -25,7 +25,7 @@
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .Dd June 26, 2001
-.Dt NAT.RULES 5
+.Dt PF.NAT 5
 .Os
 .Sh NAME
 .Nm nat.rules
