--- a/share/man/man5/Attic/pf.nat.5
+++ b/share/man/man5/Attic/pf.nat.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pf.nat.5,v 1.3 2001/06/26 04:46:21 chris Exp $
+.\"	$OpenBSD: pf.nat.5,v 1.4 2001/06/26 13:00:14 ian Exp $
 .\"
 .\" Copyright (c) 2001 Ian Darwin.  All rights reserved.
 .\"
