--- a/share/man/man4/man4.pmax/Attic/dz.4
+++ b/share/man/man4/man4.pmax/Attic/dz.4
@@ -28,7 +28,7 @@
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\"	$NetBSD: dc.4,v 1.3 1998/02/23 19:46:24 jonathan Exp $
-.\"	$OpenBSD$
+.\"	$OpenBSD: dz.4,v 1.1 2000/09/01 08:49:57 maja Exp $
 .\"
 .Dd February 20, 1998
 .Dt DZ 4 pmax
