--- a/share/man/man4/man4.pmax/Attic/ioasic.4
+++ b/share/man/man4/man4.pmax/Attic/ioasic.4
@@ -28,7 +28,7 @@
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\"	$NetBSD: ioasic.4,v 1.4 1997/10/31 02:26:09 jonathan Exp $
-.\"	$OpenBSD: ioasic.4,v 1.6 1999/07/09 13:35:40 aaron Exp $
+.\"	$OpenBSD: ioasic.4,v 1.7 2001/06/23 07:04:16 pjanzen Exp $
 .\"
 .Dd August 6, 1996
 .Dt IOASIC 4 pmax
