--- a/share/man/man4/man4.pmax/Attic/le.4
+++ b/share/man/man4/man4.pmax/Attic/le.4
@@ -28,7 +28,7 @@
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\"	$NetBSD: le.4,v 1.2 1997/10/31 02:53:46 jonathan Exp $
-.\"	$OpenBSD: le.4,v 1.4 1999/05/16 19:57:15 alex Exp $
+.\"	$OpenBSD: le.4,v 1.5 1999/07/09 13:35:41 aaron Exp $
 .\"
 .Dd August 6, 1996
 .Dt LE 4 pmax
