--- a/share/man/man4/man4.pmax/Attic/lk201.4
+++ b/share/man/man4/man4.pmax/Attic/lk201.4
@@ -28,7 +28,7 @@
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\"	$NetBSD: lk201.4,v 1.2 1997/10/13 11:23:53 lukem Exp $
-.\"	$OpenBSD: lk201.4,v 1.2 1998/03/09 15:37:23 millert Exp $
+.\"	$OpenBSD: lk201.4,v 1.3 1999/07/09 13:35:41 aaron Exp $
 .\"
 .Dd August 6, 1996
 .Dt LK201 4 pmax
