--- a/share/man/man4/man4.pmax/Attic/scc.4
+++ b/share/man/man4/man4.pmax/Attic/scc.4
@@ -28,7 +28,7 @@
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\"	$NetBSD: scc.4,v 1.3 1997/11/03 11:19:21 jonathan Exp $
-.\"	$OpenBSD: scc.4,v 1.2 1998/03/09 15:37:26 millert Exp $
+.\"	$OpenBSD: scc.4,v 1.3 1999/07/09 13:35:41 aaron Exp $
 .\"
 .Dd August 6, 1996
 .Dt SCC 4 pmax
