--- a/share/man/man4/man4.pmax/Attic/tc.4
+++ b/share/man/man4/man4.pmax/Attic/tc.4
@@ -28,7 +28,7 @@
 .\" THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
 .\"	$NetBSD: tc.4,v 1.3 1997/11/08 07:27:55 jonathan Exp $
-.\"	$OpenBSD: tc.4,v 1.3 1999/04/02 16:21:37 aaron Exp $
+.\"	$OpenBSD: tc.4,v 1.4 1999/05/16 19:57:15 alex Exp $
 .\"
 .Dd August 6, 1996
 .Dt TC 4 pmax
