--- a/share/man/man5/pf.conf.5
+++ b/share/man/man5/pf.conf.5
@@ -1,4 +1,4 @@
-.\"	$OpenBSD$
+.\"	$OpenBSD: pf.conf.5,v 1.1 2001/07/08 14:31:23 dhartmei Exp $
 .\"
 .\" Copyright (c) 2001, Daniel Hartmeier
 .\" All rights reserved.
@@ -46,7 +46,7 @@ Syntax for filter rules in BNF:
 rule      = action ( "in" | "out" )
             [ "log" | "log-all" ] [ "quick" ]
             [ "on" interface-name ]
-            [ "proto" ( proto-name | proto-number ]
+            [ "proto" ( proto-name | proto-number ) ]
             hosts
             [ flags ] [ icmp-type ] [ "keep-state" ] .
 
