--- a/bin/ksh/sh.1
+++ b/bin/ksh/sh.1
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: sh.1tbl,v 1.22 2001/05/28 15:36:08 aaron Exp $
+.\"	$OpenBSD: sh.1tbl,v 1.23 2001/06/23 14:42:13 deraadt Exp $
 .\"
 .\" Copyright (c) 1980, 1990, 1993
 .\"     The Regents of the University of California.  All rights reserved.
@@ -886,7 +886,7 @@ or
 .Pc
 is set, in which case an error occurs.
 .Pp
-Parameters can be assigned valued in a number of ways.
+Parameters can be assigned values in a number of ways.
 First, the shell implicitly sets some parameters like
 .Ic # , PWD ,
 etc.; this is the only way the special single character parameters are set.
