--- a/share/man/man4/man4.pc532/Attic/mem.4
+++ b/share/man/man4/man4.pc532/Attic/mem.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mem.4,v 1.3 2000/03/02 14:46:48 todd Exp $
+.\"	$OpenBSD: mem.4,v 1.4 2000/04/27 00:35:58 deraadt Exp $
 .\" Copyright (c) 1991 The Regents of the University of California.
 .\" All rights reserved.
 .\"
