--- a/share/man/man7/mdoc.7
+++ b/share/man/man7/mdoc.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mdoc.7,v 1.19 2001/02/25 07:08:31 aaron Exp $
+.\"	$OpenBSD: mdoc.7,v 1.20 2001/06/22 11:14:52 mpech Exp $
 .\"
 .\" Copyright (c) 1991, 1993
 .\"	The Regents of the University of California.  All rights reserved.
@@ -309,6 +309,7 @@ Produces
 .It Li \&Fn Ta Yes Ta Yes Ta "Function call (also .Fo and .Fc)."
 .It Li \&Ic Ta Yes Ta Yes Ta "Interactive command."
 .It Li \&Li Ta Yes Ta Yes Ta "Literal text."
+.It Li \&Nd Ta \&No Ta \&No Ta "Command description."
 .It Li \&Nm Ta Yes Ta Yes Ta "Command name."
 .It Li \&Op Ta Yes Ta Yes Ta "Option (also .Oo and .Oc)."
 .It Li \&Ot Ta Yes Ta Yes Ta "Old style function type (Fortran only)."
