--- a/sbin/fsirand/fsirand.8
+++ b/sbin/fsirand/fsirand.8
@@ -23,7 +23,7 @@
 .\" OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
 .\" ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 .\"
-.\"	$OpenBSD: fsirand.8,v 1.21 2000/11/09 17:52:57 aaron Exp $
+.\"	$OpenBSD: fsirand.8,v 1.22 2001/03/11 05:44:32 aaron Exp $
 .\"
 .Dd January 25, 1997
 .Dt FSIRAND 8
@@ -96,7 +96,7 @@ of memory for large disks with few cylinder groups.
 .Xr fsck 8 ,
 .Xr newfs 8 ,
 .Xr reboot 8
-.Sh AUTHOR
+.Sh AUTHORS
 Todd C. Miller <Todd.Miller@courtesan.com>
 .Sh HISTORY
 The
