--- a/usr.sbin/mrinfo/mrinfo.8
+++ b/usr.sbin/mrinfo/mrinfo.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mrinfo.8,v 1.4 2001/05/22 15:18:18 ho Exp $
+.\"	$OpenBSD: mrinfo.8,v 1.5 2001/07/20 19:09:48 mpech Exp $
 .\"	$NetBSD: mrinfo.8,v 1.2 1995/10/03 23:20:39 thorpej Exp $
 .\"
 .Dd May 8, 1995
@@ -73,7 +73,7 @@ srcrt) and status (disabled, down) of the connection is displayed.
 .Xr map-mbone 8 ,
 .Xr mrouted 8 ,
 .Xr mtrace 8
-.Sh AUTHOR
+.Sh AUTHORS
 Van Jacobson
 .Sh CAVEATS
 .Nm
