--- a/share/man/man4/man4.sparc/fga.4
+++ b/share/man/man4/man4.sparc/fga.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: fga.4,v 1.2 1999/07/25 23:43:18 jason Exp $
+.\"     $OpenBSD: fga.4,v 1.3 2000/11/10 20:02:19 todd Exp $
 .\"
 .\" Copyright (c) 1999 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -116,6 +116,7 @@ Set (attempt to get) the mailbox
 If successful,
 .Ar fgasem_val
 will have a value of 1, otherwise it will have a value of 0.
+.El
 .Sh SEE ALSO
 .Xr ioctl 2 ,
 .Xr ddb 4 ,
