--- a/share/man/man4/man4.sparc/ie.4
+++ b/share/man/man4/man4.sparc/ie.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: ie.4,v 1.3 1999/05/16 19:57:20 alex Exp $
+.\"     $OpenBSD: ie.4,v 1.4 1999/07/09 13:35:42 aaron Exp $
 .\"
 .\" Copyright (c) 1998 The OpenBSD Project
 .\" All rights reserved.
@@ -39,7 +39,6 @@ interface employs the address resolution protocol described in
 .Xr arp 4
 to dynamically map between Internet and Ethernet addresses on the local
 network.
-.Pp
 .Sh SEE ALSO
 .Xr arp 4 ,
 .Xr be 4 ,
