--- a/share/man/man4/man4.sun3/Attic/ie.4
+++ b/share/man/man4/man4.sun3/Attic/ie.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: ie.4,v 1.1.1.1 1995/08/08 20:18:53 gwr Exp $
+.\"	$OpenBSD: ie.4,v 1.5 2001/01/29 02:11:12 niklas Exp $
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -70,7 +70,6 @@ interface employs the address resolution protocol described in
 .Xr arp 4
 to dynamically map between Internet and Ethernet addresses on the local
 network.
-.Pp
 .Sh SEE ALSO
 .Xr arp 4 ,
 .Xr inet 4 ,
