--- a/bin/ln/symlink.7
+++ b/bin/ln/symlink.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: symlink.7,v 1.10 2000/03/23 21:10:22 aaron Exp $
+.\"	$OpenBSD: symlink.7,v 1.11 2000/03/24 03:28:37 aaron Exp $
 .\"	$NetBSD: symlink.7,v 1.4 1996/04/25 15:44:56 mycroft Exp $
 .\"
 .\" Copyright (c) 1992, 1993, 1994
@@ -267,9 +267,9 @@ In no case will either
 .Nm chown
 or
 .Nm rm
-affect the file which
+follow the symlink to affect the file which
 .Dq Li slink
-references in any way.
+references.
 .Pp
 The second rule applies to symbolic links that reference files of type
 directory.
