--- a/share/man/man4/man4.powerpc/Attic/aed.4
+++ b/share/man/man4/man4.powerpc/Attic/aed.4
@@ -1,4 +1,4 @@
-.\" $OpenBSD$
+.\" $OpenBSD: aed.4,v 1.1 2001/08/21 19:58:03 drahn Exp $
 .\"
 .\" Copyright (c) 2001 Peter Philipp
 .\" All rights reserved.
