--- a/share/man/man4/man4.sparc64/Attic/gem.4
+++ b/share/man/man4/man4.sparc64/Attic/gem.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: gem.4,v 1.2 2001/10/24 21:15:32 miod Exp $
+.\"	$OpenBSD: gem.4,v 1.3 2001/11/13 13:54:26 mpech Exp $
 .\"
 .\" Copyright (c) 2001 Miodrag Vallat.
 .\" All rights reserved.
