--- a/share/man/man4/man4.sparc/fga.4
+++ b/share/man/man4/man4.sparc/fga.4
@@ -1,4 +1,4 @@
-.\"     $OpenBSD: fga.4,v 1.3 2000/11/10 20:02:19 todd Exp $
+.\"     $OpenBSD: fga.4,v 1.4 2001/08/03 15:21:16 mpech Exp $
 .\"
 .\" Copyright (c) 1999 Jason L. Wright (jason@thought.net)
 .\" All rights reserved.
@@ -86,7 +86,7 @@ The
 device responds to the following
 .Xr ioctl 2
 calls defined in <machine/fgaio.h>:
-.Bl -tag -width
+.Bl -tag -width FGAIOCSEM
 .It Dv FGAIOCSEM
 .Pq Li "struct fga_sem"
 Clear (release) the semaphore
