--- a/share/man/man4/man4.sparc/bwtwo.4
+++ b/share/man/man4/man4.sparc/bwtwo.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: bwtwo.4,v 1.9 2002/02/20 17:18:33 jason Exp $
+.\"	$OpenBSD: bwtwo.4,v 1.10 2002/06/30 21:45:25 deraadt Exp $
 .\" Copyright (c) 1992, 1993
 .\"	The Regents of the University of California.  All rights reserved.
 .\"
@@ -63,6 +63,6 @@ needed to run
 .Xr cgsix 4 ,
 .Xr cgthree 4 ,
 .Xr cgtwo 4 ,
-.Xr p9100 4 ,
+.Xr pnozz 4 ,
 .Xr sbus 4 ,
 .Xr tcx 4
