--- a/share/man/man4/man4.sparc/cgeight.4
+++ b/share/man/man4/man4.sparc/cgeight.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cgeight.4,v 1.8 2001/06/23 07:04:17 pjanzen Exp $
+.\"	$OpenBSD: cgeight.4,v 1.9 2001/11/13 13:54:26 mpech Exp $
 .\"	$NetBSD: cgeight.4,v 1.2 1997/10/08 22:00:03 jtc Exp $
 .\"
 .\" Copyright (c) 1996 The NetBSD Foundation, Inc.
@@ -64,5 +64,5 @@ needed to run the X Window System.
 .Xr cgsix 4 ,
 .Xr cgthree 4 ,
 .Xr cgtwo 4 ,
-.Xr p9100 4 ,
+.Xr pnozz 4 ,
 .Xr tcx 4
