--- a/share/man/man4/man4.sparc/cgfour.4
+++ b/share/man/man4/man4.sparc/cgfour.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cgfour.4,v 1.7 1999/09/09 02:40:21 jason Exp $
+.\"	$OpenBSD: cgfour.4,v 1.8 2001/06/23 07:04:18 pjanzen Exp $
 .\"	$NetBSD: cgfour.4,v 1.2 1997/10/08 22:00:05 jtc Exp $
 .\"
 .\" Copyright (c) 1996 The NetBSD Foundation, Inc.
@@ -66,5 +66,5 @@ needed to run
 .Xr cgsix 4 ,
 .Xr cgthree 4 ,
 .Xr cgtwo 4 ,
-.Xr p9100 4 ,
+.Xr pnozz 4 ,
 .Xr tcx 4
