--- a/share/man/man4/man4.sparc/cgthree.4
+++ b/share/man/man4/man4.sparc/cgthree.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: cgthree.4,v 1.9 2002/02/20 17:18:33 jason Exp $
+.\"	$OpenBSD: cgthree.4,v 1.10 2002/06/30 21:45:25 deraadt Exp $
 .\"	$NetBSD: cgthree.4,v 1.4 1998/06/11 08:32:20 fair Exp $
 .\"
 .\" Copyright (c) 1992, 1993
@@ -38,7 +38,7 @@
 .\"
 .\"	from: Header: cgthree.4,v 1.3 94/02/03 20:49:52 leres Exp
 .\"     from: @(#)cgthree.4	8.2 (Berkeley) 2/16/94
-.\"	$Id: cgthree.4,v 1.9 2002/02/20 17:18:33 jason Exp $
+.\"	$Id: cgthree.4,v 1.10 2002/06/30 21:45:25 deraadt Exp $
 .\"
 .Dd February 16, 1994
 .Dt CGTHREE 4 sparc
@@ -64,6 +64,6 @@ needed to run
 .Xr cgfourteen 4 ,
 .Xr cgsix 4 ,
 .Xr cgtwo 4 ,
-.Xr p9100 4 ,
+.Xr pnozz 4 ,
 .Xr sbus 4 ,
 .Xr tcx 4
