--- a/share/man/man4/man4.sparc/tcx.4
+++ b/share/man/man4/man4.sparc/tcx.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: tcx.4,v 1.10 2002/02/20 17:18:33 jason Exp $
+.\"	$OpenBSD: tcx.4,v 1.11 2002/06/30 21:45:25 deraadt Exp $
 .\"	$NetBSD: tcx.4,v 1.3 1997/10/08 22:00:14 jtc Exp $
 .\"
 .\" Copyright (c) 1996 The NetBSD Foundation, Inc.
@@ -69,5 +69,5 @@ emulation mode.
 .Xr cgsix 4 ,
 .Xr cgthree 4 ,
 .Xr cgtwo 4 ,
-.Xr p9100 4 ,
+.Xr pnozz 4 ,
 .Xr sbus 4
