--- a/share/man/man7/hier.7
+++ b/share/man/man7/hier.7
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: hier.7,v 1.31 2001/09/17 16:59:31 camield Exp $
+.\"	$OpenBSD: hier.7,v 1.32 2001/12/03 01:10:22 miod Exp $
 .\"	$NetBSD: hier.7,v 1.7 1994/11/30 19:07:10 jtc Exp $
 .\"
 .\" Copyright (c) 1990, 1993
@@ -62,7 +62,7 @@ Block and character device files.
 .Bl -tag -width MAKEDEV -compact
 .It Li MAKEDEV
 Script for creating device files (see
-.Xr makedev 8 ) .
+.Xr MAKEDEV 8 ) .
 .It Li fd/
 File descriptor files (see
 .Xr fd 4 ) .
